# PersistShrike

./: readme.md  readme.txt  server.py
reverse_shell/: Cargo.toml
reverse_shell/src/: main.rs
